--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,3 +1,17 @@
+$primary-yellow : #FFD200;
+$primary-blue : #0364FF;
+$primary-green : #0EE881;
+$primary-red : #FF5252;
+
+$solid-black : #040B11;
+
+$secondary-gray : #C1C7D0;
+$secondary-black : #1C232A;
+$black-card : #10161C;
+
+
+$app-padding : 31px;
+
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
