--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,6 +17,9 @@ $app-padding : 31px;
 
 /** Ionic CSS Variables **/
 :root {
+
+  --ion-background-color :#040B11;
+  --ion-text-color : white;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
