add custom tabs

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <span class="mdi mdi-chevron-left "></span>
+  Tasks
+  <span class="mdi mdi-bell-outline primary-yellow-txt"></span>
+</div>
