--- a/src/global.scss
+++ b/src/global.scss
@@ -27,10 +27,7 @@
 
 
 @import 'theme/variables.scss';
-
-// html{
-//     font-family: "Avenir Heavy", Avenir, Helvetica, Arial, sans-serif;
-// }
+@import "~@mdi/font/scss/materialdesignicons.scss";
 
 
 @font-face {
