add upcoming tasks section

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,5 +13,7 @@
 
           <custom-tabs [tabs]="tasksTabs"></custom-tabs>
 
+          <app-all-tasks></app-all-tasks>
+
     </div>
 </ion-content>
