--- a/src/app/custom-progress-bar/custom-progress-bar.component.html
+++ b/src/app/custom-progress-bar/custom-progress-bar.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="bar ">
-       <div class="progress" [style.minWidth]="30">
+       <div class="progress" [style]="{'min-width': progress +'%'}">
 
        </div>
     </div>
