add gradient to chart

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
             </app-custom-button>
           </div>
 
-          <custom-tabs [tabs]="tasksTabs"></custom-tabs>
+          <custom-tabs class="font-size-14" [tabs]="tasksTabs"></custom-tabs>
 
           <app-all-tasks></app-all-tasks>
 
