--- a/src/app/all-tasks/all-tasks.component.scss
+++ b/src/app/all-tasks/all-tasks.component.scss
@@ -57,11 +57,10 @@
     box-shadow: inset 2px 2px 6px 0 $secondary-black, inset -2px -2px 6px 0 #040B11;
 
     .expenses-grouping-options{
-        display: flex;
-        justify-content: center;
-        div{
-            margin : 18px;
-        }
+
+      font-size: 18px;
+      margin : 18px;
+
     }
 
     .total-expenses{
